@@ -1,9 +1,33 @@
 -*- mode: doctest ;-*-
 
+(TODO: need a better integration test for reindex_member_project_ids()
+ here.  but setting that up with reasonable isolation is more effort
+ than I have time for now.  For now, just make sure it doesn't
+ explode.)
+
+  >>> self.loginAsPortalOwner()
+  >>> from opencore.member.subscribers import reindex_member_project_ids
+  >>> mship = self.portal.portal_teams.p1['m1']
+  >>> m1 = self.portal.portal_membership.getMemberById('m1')
+  >>> m1path = '/'.join(m1.getPhysicalPath())
+  >>> brain = self.portal.membrane_tool(path=m1path)[0]
+  >>> set(m1.project_ids()) == set(brain.project_ids)
+  True
+  >>> reindex_member_project_ids(mship, event=None)
+  >>> # No change.
+  >>> brain = self.portal.membrane_tool(path=m1path)[0]
+  >>> set(m1.project_ids()) == set(brain.project_ids)
+  True
+
+
 Removing a member from portal_memberdata results in the member's home
 folder being removed automatically as well. This is useful so we don't
 have to remember to remove the member from 2 places when removing them
 from the site.
+
+(TODO: This test is destructive, if it's not run last in the layer,
+ the deleted members won't exist for other suites in the same layer
+ that might reasonably expect them. Needs better isolation.)
 
 Remove a ``member1``::
 
